# soa-project

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  go.mod  main_service.dockerfile  posts_service.dockerfile  run.sh  run_tests.sh
.github/workflows/: e2e-tests.yml  linter.yml  unit-tests.yml
doc/: container-diagram.puml  context-diagram.puml  entity-relationship-diagram.puml
docs/: container-diagram.puml  entity-relationship-diagram.puml  er-diagram.puml
main-service/: .env  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  http-server.go  user.go
main-service/cmd/: main.go
main_service/: README.md  go.mod  go.sum  http-server.go  main_service.dockerfile  openapi.yml  user.go
main_service/cmd/: main.go
main_service/configs/: config.yml
main_service/migration-files/: 000001_init.up.sql
posts/: posts.pb.go  posts.proto  posts_grpc.pb.go
posts_service/: README.md  go.mod  go.sum  post.go  posts_service.dockerfile
posts_service/cmd/: main.go
posts_service/configs/: config.yml
posts_service/migration-files/: 000001_init.up.sql
src/gateway/: go.mod  go.sum
src/posts/: README.md  go.mod  go.sum
src/proto/: posts.proto  statistics.proto
src/statistics/: go.mod  go.sum
statistics_service/: README.md  go.mod  go.sum  statistics.dockerfile
statistics_service/cmd/: main.go
tests/: docker-compose.yml
tests/e2e/: e2e.dockerfile  pyproject.toml  requirements.txt  test_e2e.py
tests/posts/: .golangci.yml  go.mod  go.sum  posts.dockerfile  posts_test.go
tests/posts_tests/: go.mod  go.sum  posts_test.go
(+94 files in other folders)
